<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorPrimaryYellow"
    app:cardElevation="@dimen/_5sdp">
    <LinearLayout
        android:layout_margin=".5dp"
        android:background="@drawable/border_btn_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
<TextView
    android:padding="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pick_an_age"
    android:textColor="@color/texts"
    android:textSize="@dimen/_14sdp"
     android:layout_margin="@dimen/_5sdp"
    android:fontFamily="@font/poppins_bold"
    />
        <NumberPicker
            android:id="@+id/dialog_number_picker"
            android:layout_width="wrap_content"
            android:theme="@style/NumberPickerTheme"
            android:layout_height="wrap_content"/>
<RelativeLayout
    android:layout_margin="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
         android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />


    <TextView
         android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/_10sdp"
        android:text="@string/select"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>