<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/header_layout"
            android:id="@+id/header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_marginTop="@dimen/_25sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_below="@+id/txt"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:src="@drawable/qr_codes"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/do_you_already_have_mndalakanm_installed_on_another_device"
                        android:textAlignment="center"
                        android:textColor="@color/texts"
                        android:textSize="@dimen/_14sdp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="start"
                            android:text="@string/_1_open_mndalakanm_on_another_device"
                            android:textColor="@color/texts"
                            android:textSize="@dimen/_10sdp" />
                        <TextView
                              android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="start"
                            android:text="@string/_2_tap_mndalakanm_qr_code_scanner_top_right_of_screen"
                            android:textColor="@color/texts"
                            android:textSize="@dimen/_10sdp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="start"
                            android:text="@string/_3_scan_the_qr_code"
                            android:textColor="@color/texts"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <TextView
android:visibility="gone"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:id="@+id/other_pairing_codes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/poppins_bold"
                        android:padding="@dimen/_15sdp"
                        android:text="Can't Scan ?"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryYellow"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/scan_qr_code"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="@dimen/_10sdp"
                    app:rippleColor="@color/black" />

            </RelativeLayout>
        </ScrollView>


    </LinearLayout>

</layout>
