<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"

        >

        <LinearLayout

            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/border_btn_white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">



                <LinearLayout
                    android:layout_margin=".5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_btn_white"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/are_you_sure_you_want_to_delete_this_child"
                        android:textColor="@color/texts"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    >
    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/poppins_medium"
        android:outlineProvider="background"
        android:outlineSpotShadowColor="@color/red"
        android:padding="@dimen/_10sdp"
        android:text="@string/delete_child"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:rippleColor="@color/red" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:elevation="@dimen/_3sdp"
        android:fontFamily="@font/poppins_medium"
        android:outlineProvider="background"
        android:outlineSpotShadowColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/texts"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:rippleColor="@color/black" />

</LinearLayout>


        </LinearLayout>

    </RelativeLayout>
