<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/parent"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_cancel"
            android:layout_marginLeft="@dimen/_9sdp"
            android:layout_marginRight="@dimen/_9sdp"
            android:background="@drawable/background_edit"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linear_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relative_take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/txt_black_normal"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:gravity="center"
                        android:text="@string/take_photo" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:src="@drawable/profile_pick" />
                </RelativeLayout>

                <View style="@style/Separator_View" />

                <RelativeLayout
                    android:id="@+id/relative_photo_library"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:gravity="center"
                        style="@style/txt_black_normal"
                        android:text="@string/photo_library" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:src="@drawable/profile_pick" />
                </RelativeLayout>



            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_above="@+id/space"
            android:layout_marginLeft="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_9sdp"
            android:background="@drawable/background_edit"
            android:gravity="center"
            android:text="@string/cancel" />

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</layout>